# MinersWorldCoin-Android-Miner

./: .gitignore  INSTALL.md  PrivacyPolicy.md  README.md  TermsOfService.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: update-download-badge.yml
app/: build.gradle
app/src/androidTest/java/com/nugetzrul3/sugarchainandroidminer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nugetzrul3/minersworldcoinandroidminer/: MainActivity.kt  MiningService.kt  MiningStats.kt  SettingsPage.kt  SharedPref.kt  SplashActivity.kt  Utils.kt
app/src/main/res/layout/: activity_main.xml  activity_settings_page.xml  activity_splash_screen.xml
app/src/main/res/menu/: menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nugetzrul3/sugarchainandroidminer/: ExampleUnitTest.kt
fastlane/metadata/android/en-US/: short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
minersworldcoinmininglibrary/: CMakeLists.txt  build.gradle
minersworldcoinmininglibrary/src/androidTest/java/com/nugetzrul3/sugarchainmininglibrary/: ExampleInstrumentedTest.java
minersworldcoinmininglibrary/src/main/: AndroidManifest.xml
minersworldcoinmininglibrary/src/main/cpp/: sugarminer.cpp
minersworldcoinmininglibrary/src/main/cpp/libcpuminer/: CMakeLists.txt  YespowerIots.c  YespowerIso.c  YespowerItc.c  YespowerLitb.c  YespowerMbc.c  YespowerSugar.c  YespowerUrx.c  YespowerYtn.c  libcpuminer.c  miner.h  power2b.c  sha256.c  util.c  yespowerADVC.c  yespowerMWC.c  yespowerMwc.c  yespower_legacy.c  yespower_legacy.h  yespoweradventurecoin.c  yespoweradventurecoin.h
minersworldcoinmininglibrary/src/main/cpp/libcpuminer/crypto/: blake2b.c
minersworldcoinmininglibrary/src/main/cpp/sugarmaker/: Makefile.am  YespowerMwc.c  configure.ac  cpu-miner.c  miner.h
minersworldcoinmininglibrary/src/main/java/com/nugetzrul3/sugarchainmininglibrary/: SugarMiner.java
minersworldcoinmininglibrary/src/test/java/com/nugetzrul3/sugarchainmininglibrary/: ExampleUnitTest.java
